WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118438
Fix the performance regressions introduced by
r152418
https://bugs.webkit.org/show_bug.cgi?id=118438
Summary
Fix the performance regressions introduced by r152418
Benjamin Poulain
Reported
2013-07-05 17:30:19 PDT
Fix the performance regressions introduced by
r152418
Attachments
Patch
(2.35 KB, patch)
2013-07-05 17:36 PDT
,
Benjamin Poulain
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2013-07-05 17:36:09 PDT
Created
attachment 206178
[details]
Patch
Mikhail Pozdnyakov
Comment 2
2013-07-05 20:45:15 PDT
Comment on
attachment 206178
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=206178&action=review
Looks great, thanks for fixing it.
> Source/WTF/wtf/text/StringImpl.h:1093 > +ALWAYS_INLINE bool equal(const UChar* a, const LChar* b, unsigned length)
maybe it's worth saving couple of lines of code putting the function body to the same line?
Benjamin Poulain
Comment 3
2013-07-05 20:48:17 PDT
> maybe it's worth saving couple of lines of code putting the function body to the same line?
Sure, I'll change that before landing.
Benjamin Poulain
Comment 4
2013-07-06 23:47:34 PDT
Committed
r152438
: <
http://trac.webkit.org/changeset/152438
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug