Fix the performance regressions introduced by r152418 https://bugs.webkit.org/show_bug.cgi?id=118438

Reviewed by Sam Weinig.

* wtf/text/StringImpl.h:
(WTF::equal):
Looping between two arbitrary pointers prevents important loop
optimizations.


Canonical link: https://commits.webkit.org/136427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152438 268f45cc-cd09-0410-ab3c-d52691b4dbfc